Fixed button overflow

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -15,7 +15,7 @@
 }
 
 .inline-content {
-  max-width: 32.5rem;
+  max-width: 33.5rem;
   display: block;
 }
 @media (max-width: 992px) {
